--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "set NODE_OPTIONS=--openssl-legacy-provider & webpack --config webpack.prod.js",
     "build-dev": "set  NODE_OPTIONS=--openssl-legacy-provider & webpack-dev-server  --config webpack.dev.js --open"
@@ -13,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "sass": "^1.63.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
@@ -25,8 +29,10 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.5.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
